# CVG-SLR-Wizard

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.patch  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  _gen.py  _w.py  _write_web.py  deploy_production.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-lock.txt  requirements-web.txt  run_cov.bat  run_tests.bat  run_tests.py  sample_config.json  start-dev.bat  start-prod-direct.bat
.github/workflows/: ci.yml
05_ChangeLogs/: file_version_index.csv  master_changelog.md  version_manifest.yml
Research/: README.md
caddy/: Caddyfile
docs/: API_REFERENCE.md  DEPLOYMENT_SLR_WEB.md  index.md
gov/: README.md
portal/: Dockerfile  app.py  requirements.txt
portal/templates/: dashboard.html
scripts/: _add_cvg_headers.py  _scan_and_fix_headers.py  _verify_all.py  bootstrap_slr_vm.sh  run_slr.py
slr_wizard/: __init__.py  cli.py  config.py  core.py  engine.py  insights.py  io.py  monitoring.py  noaa.py  paths.py  processing.py  recovery.py  report.py  vdatum.py  web.py  web_api.py
slr_wizard/demo_data/: demo_config.json
slr_wizard/templates/: index.html  insights.html  landing.html  result.html
tests/: __init__.py  conftest.py  test_config.py  test_engine.py  test_insights.py  test_monitoring.py  test_noaa.py  test_processing.py  test_recovery.py  test_report.py  test_slr_wizard.py  test_web_api.py
tools/: README.md  __init__.py  _check_external.py  batch_report_gen.py  expand_station_table.py  fetch_all_stations.py  validate_dem.py
(+1 files in other folders)
